# justmake

./: .gitignore  CMakeLists.txt  FAQ.md  JustmakeLexer.g4  JustmakeParser.g4  README.md  build.sh  clear.sh  jm_driver.cpp  prereq.sh  test1.txt
cmake/: ExternalAntlr4Cpp.cmake  FunExpr.cmake
test/: test2.jumake
